# robo-croissant-dashboard

./: Cargo.toml  README.md  Rocket.toml
db/: robo_croissant.db
src/: main.rs
templates/: base.html.tera  index.html.tera  update.html.tera
